1. Changes for open source management, including licensing. 2. Readability changes for home page. 3. Changed "Developer Resources" page into "AES70" and spruced up the format.

--- a/downloads.html
+++ b/downloads.html
@@ -3,18 +3,18 @@
     <link rel=stylesheet type='text/css' href='css/screen.css' media='screen'/>
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,500|Dosis:400,500" rel="stylesheet">
     <script src='js/script.js' ></script>
+		<title>OCA Techsite - Downloads</title>
   </head>
   <body>
     <div class=header>
       <div class=logo>
-        Technical Site
+        OCA Technical Site
       </div>
 			<div class=topnav>
 				<ul>
 					<li><a href='index.html'>Home</a></li>
+					<li><a href='aes70.html'>AES70</a></li>					
 					<li><a href='downloads.html'>Downloads</a></li>
-					<li><a href='resources.html'>Developer Resources</a></li>
-					<li><a href='opensource.html'>Open-Source Software</a></li>
 					<li><a href='opensource.html'>Open-Source Software</a></li>
 					<li><a href='licensing.html'>Licensing</a></li>
 					<li><a href='links.html'>Links</a></li>
@@ -28,10 +28,17 @@
 				and supporters of AES70-based equipment and systems. Both commercial and 
 				noncommercial products are included.  Rules covering the listings are here:
 				<div class="in">
-          <a href='https://OCAAlliance.github.io/downloads/ListingRules.pdf'>
+          <a target=_blank href='https://OCAAlliance.github.io/downloads/ListingRules.pdf'>
             https://OCAAlliance.github.io/downloads/ListingRules.pdf
           </a>.
         </div>
+			</p>
+			<p>
+				Some of the listings in this section are OCA Alliance open-source products.  
+				The rules for using contributing to these products are in the 
+				<a target=_blank href="opensource.html"> Open-Source Software pages</a>.
+				Details of the Alliance's open-source software licensing policies and procedures are 
+				in the <a target=_blank href="licensing.html">Licensing</a> pages.
 			</p>
 			
 			<h2>AES70 Compliancy Test Tool (OCTT)</h2>
@@ -61,7 +68,7 @@
       </p>
       
       <div class="in">
-        <a href='https://github.com/OCAAlliance/OcaToolsAndDemos/releases/tag/v2.0.1'>
+        <a href='https://github.com/OCAAlliance/OcaToolsAndDemos/releases/tag/v2.0.1' target=_blank>
           https://github.com/OCAAlliance/OcaToolsAndDemos/releases/tag/v2.0.1
         </a>
       </div>
@@ -81,14 +88,14 @@
       
       <p class="tight">
         Download source code here:
-        <a href='https://github.com/OCAAlliance/OcaToolsAndDemos'>
+        <a href='https://github.com/OCAAlliance/OcaToolsAndDemos' target=_blank>
           https://github.com/OCAAlliance/OcaToolsAndDemos
         </a>
       </p>
 
 			<p class="tight">
         Download hardware design files here:
-        <a href='downloads/OCA Micro Hardware Package 20160802.zip'>
+        <a href='downloads/OCA Micro Hardware Package 20160802.zip' target=_blank>
 					OCA Micro Hardware Package 20160802.zip
 				</a>
       </p>
@@ -96,13 +103,16 @@
       <h2>Focusrite RedNet Virtual OCA Device</h2>
 
       <p>
-        The Focusrite RedNet Virtual OCA Device is a device simulation developed by <a rel=noopener target=_blank href='http://focusrite.com'>Focusrite</a>.
+        The Focusrite RedNet Virtual OCA Device is a device simulation developed by 
+				<a rel=noopener target=_blank href='http://focusrite.com'>
+					Focusrite
+				</a>.
         It is useful when testing OCA Controllers.
         The device simulation is available as a Windows executable.
        </p>
 			 <p>
         Download ZIP Archive here: &nbsp;&nbsp;
-					<a href='downloads/Focusrite RedNet Virtual OCA Device.zip'>
+					<a href='downloads/Focusrite RedNet Virtual OCA Device.zip' target=_blank>
 						Focusrite RedNet Virtual OCA Device.zip
 					</a>
       </p>
@@ -126,7 +136,7 @@
       </p>
       <p>
         Download here: &nbsp;&nbsp;
-				<a href='downloads/AES70 Implementation Chart v06 .xltm'>
+				<a target=_blank href='downloads/AES70 Implementation Chart v06 .xltm'>
 					OCA Implementation Chart v06 .xltm
 				</a>
       </p>
@@ -135,12 +145,12 @@
       </p>
       <ul>
 				<li> 
-					<a href='downloads/OCA MicroDemo AES70 Implementation Chart .xlsm'> 
+					<a target=_blank href='downloads/OCA MicroDemo AES70 Implementation Chart .xlsm'> 
 						OCA MicroDemo 
 					</a> 
 				</li>
 				<li> 
-					<a href='downloads/Focusrite Rednet8 AES70 Implementation Chart .xlsm'> 
+					<a target=_blank href='downloads/Focusrite Rednet8 AES70 Implementation Chart .xlsm'> 
 						Focusrite Rednet Virtual OCA Device 
 					</a> 
 				</li>
@@ -155,7 +165,7 @@
 			<p>
 				For Wireshark versions before 4.0, this plugin allows analyzing OCA network traffic.
         Download here: &nbsp;&nbsp;
-				<a href='downloads/OCP.1.lua'>
+				<a target=_blank href='downloads/OCP.1.lua'>
 					OCP.1.lua
 				</a>
       </p>
@@ -167,11 +177,11 @@
 				The presentations can be downloaded for reference. Remark that audio tracks from the presentations can be purchased via the AES organization.
       </p>
       <p>
-        Download here: <a href='downloads/AES143 Network track NA09 - AES70 Device.pdf'>
+        Download here: <a target=_blank href='downloads/AES143 Network track NA09 - AES70 Device.pdf'>
 					How to make an AES70 device
 				</a> 
 				&nbsp; and &nbsp;
-				<a href='downloads/AES143 Network track NA10 - AES70 Controller.pdf'>
+				<a target=_blank href='downloads/AES143 Network track NA10 - AES70 Controller.pdf'>
 					How to make an AES70 controller
 				</a>
       </p>
@@ -188,7 +198,7 @@
 					</p>
 					<ul class="tight">
 						<li>
-							<a href='downloads/AES70 Object Model v01 .pdf'>
+							<a target=_blank href='downloads/AES70 Object Model v01 .pdf'>
 								AES70 Object Model v01 .pdf
 							</a>
 						</li>
@@ -200,19 +210,19 @@
 					</p>
 					<ul>
 						<li class="tight">
-							<a href='downloads/The OCA Object Model v07 .ppsx'>
+							<a target=_blank href='downloads/The OCA Object Model v07 .ppsx'>
 								The OCA Object Model v07 .ppsx 
 							</a>
 							<i>&nbsp;&nbsp;&nbsp;(navigable version, requires MS PowerPoint)</i>
 						</li>
 						<li class="tight">
-							<a href='downloads/The OCA Object Model v07 .pdf'>
+							<a target=_blank href='downloads/The OCA Object Model v07 .pdf'>
 								The OCA Object Model v07 .pdf
 							</a>
 							<i>&nbsp;&nbsp;&nbsp;(PDF version, sequentially readable only)</i>
 						</li>
 						<li class="tight">
-							<a href='downloads/The OCA Object Model - Quick Look v02 .ppsx'>
+							<a target=_blank href='downloads/The OCA Object Model - Quick Look v02 .ppsx'>
 								The OCA Object Model - Quick Look v02 .ppsx
 							</a>
 							<i>&nbsp;&nbsp;&nbsp;(Navigable version, arranged as summary with clickable details - requires MS PowerPoint)</i>
@@ -234,7 +244,7 @@
 					</p>
 					<p class="tight">
 						Download here (2 pages): &nbsp;&nbsp;
-						<a href='downloads/Device Control Newbie FAQ v02 .pdf'>
+						<a target=_blank href='downloads/Device Control Newbie FAQ v02 .pdf'>
 							Device Control Newbie FAQ v02 .pdf
 						</a>
 					</p>
@@ -251,7 +261,7 @@
 					</p>
 					<p class="tight">
 						Download here (20 slides):&nbsp;&nbsp;
-						<a href='downloads/XCA v06 .pdf'>
+						<a target=_blank href='downloads/XCA v06 .pdf'>
 							XCA v06 .pdf
 						</a>
 					</p>
@@ -272,7 +282,7 @@
 			</p>
 			<p class="loose">
 				Download here (6 slides):&nbsp;&nbsp;
-				<a href='downloads/Typical Production Video Camera - OCA Object Model v05 .pdf'>
+				<a target=_blank href='downloads/Typical Production Video Camera - OCA Object Model v05 .pdf'>
 					Typical Production Video Camera - OCA Object Model v05 .pdf
 				</a>
 			</p>
