--- a/licensing.html
+++ b/licensing.html
@@ -3,54 +3,58 @@
     <link rel=stylesheet type='text/css' href='css/screen.css' media='screen'/>
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,500|Dosis:400,500" rel="stylesheet">
     <script src='js/script.js' ></script>
+		<title>OCA Techsite - Licensing</title>		
   </head>
   <body>
     <div class=header>
       <div class=logo>
-        Technical Site
+        OCA Technical Site
       </div>
 			<div class=topnav>
 				<ul>
 					<li><a href='index.html'>Home</a></li>
+					<li><a href='aes70.html'>AES70</a></li>					
 					<li><a href='downloads.html'>Downloads</a></li>
-					<li><a href='resources.html'>Developer Resources</a></li>
 					<li><a href='opensource.html'>Open-Source Software</a></li>
 					<li><a href='licensing.html'>Licensing</a></li>
 					<li><a href='links.html'>Links</a></li>
 				</ul>
 			</div>
     </div>
-    <div class=content>
-      <h1> Licensing </h1>
-      <p>
-        This page describes the OCA Alliance's licensing policies and procedures for open-source projects.  
-        The Alliance uses Apache Foundation licenses, which cover
-        a wide range of intellectual-property issues, including patent rights.
-      </p>
-      <p>
-        Apache licenses do <b>not</b> have copy-left requirements, and are widely accepted
-        for commercial use.
-      </p>
-      <h2>License for Use</h1>
-      <p class="tight">
-         OCA Alliance open-source products are licensed for use under the <b>Apache License, Version 2.0</b>, 
-         and may not be used except in compliance with this license. 
-      </p>
-      <p>
-         Copies (identical) of this license are at
-      </p>
-      <div class="in">
-        <a href="http://www.apache.org/licenses/LICENSE-2.0">
-          http://www.apache.org/licenses/LICENSE-2.0
-        </a>
-        <br>
-        <b>and</b>
-        <br>
-        <a href="https://ocaalliance.github.io/licensing">
-          https://ocaalliance.github.io/licensing/
-        </a>
-        &nbsp;&nbsp;.
+		<div class=content>
+			<h1> Licensing </h1>
+			<p>
+				This page describes the OCA Alliance's licensing policies and procedures for open-source projects.  
+				The Alliance uses Apache Foundation licenses, which cover
+				a wide range of intellectual-property issues, including patent rights.
+			</p>
+			<p>
+				Apache licenses do <b>not</b> have copy-left requirements, and are widely accepted
+				for commercial use.
+			</p>
+			<h2>License for Use</h1>
+			<p class="tight">
+				OCA Alliance open-source products are licensed for use under the <b>Apache License, Version 2.0</b>, 
+				and may not be used except in compliance with this license. 
+			</p>
+			<p>
+				A copy of this license, including instructions for use, is on the Apache website, here:
+			</p>
+			<div class="in">
+				<a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">
+					http://www.apache.org/licenses/LICENSE-2.0
+				</a>
+			</div>
+			<p>
+				A clean copy of the license text is here:
+			</p>
+			<div class="in">
+				<a href="licensing/Apache License v2.0.pdf" target="_blank">
+					https://ocaalliance.github.io/licensing/Apache License v2.0.pdf
+				</a>
+				&nbsp;&nbsp;.
       </div>
+			
       <p>
           This license does not require signing; 
           Any OCA open-source product may be used without executing an agreement.
@@ -80,7 +84,7 @@
       <p>
         Every individual who contributes ideas, code, or documentation to any OCA Alliance open-source 
         project must submit a completed and signed 
-        <a href="licensing/OCA Alliance ICLA .pdf">
+        <a href="licensing/OCA Alliance ICLA.pdf" target="_blank">
             <b>Individual Contributor License Agreement (ICLA)</b>
         </a>
         to the Alliance.  
@@ -103,7 +107,7 @@
       <p>
         A corporation that assigns employees to work on an OCA Alliance project may optionally 
         submit a completed and signed 
-        <a href="licensing/OCA Alliance CCLA .pdf">
+        <a href="licensing/OCA Alliance CCLA.pdf" target="_blank">
             <b>Corporate Contributor License Agreement (CCLA)</b>
         </a>
         to the Alliance.
@@ -139,12 +143,12 @@
       </p>
       <ul >
         <li style="margin-bottom:6pt"> 
-          <a href="licensing/OCA Alliance ICLA .pdf" target="_blank"> 
+          <a href="licensing/OCA Alliance ICLA.pdf" target="_blank"> 
             <b>ICLA</b> 
           </a> 
         </li>
         <li style="margin-bottom:6pt"> 
-          <a href="licensing/OCA Alliance CCLA .pdf" target="_blank"> 
+          <a href="licensing/OCA Alliance CCLA.pdf" target="_blank"> 
             <b>CCLA</b> 
           </a> 
         </li>
