--- a/links.html
+++ b/links.html
@@ -3,17 +3,18 @@
     <link rel=stylesheet type='text/css' href='css/screen.css' media='screen'/>
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,500|Dosis:400,500" rel="stylesheet">
     <script src='js/script.js' ></script>
+		<title>OCA Techsite - Links</title>		
   </head>
   <body>
     <div class=header>
       <div class=logo>
-        Technical Site
+        OCA Technical Site
       </div>
 			<div class=topnav>
 				<ul>
 					<li><a href='index.html'>Home</a></li>
+					<li><a href='aes70.html'>AES70</a></li>					
 					<li><a href='downloads.html'>Downloads</a></li>
-					<li><a href='resources.html'>Developer Resources</a></li>
 					<li><a href='opensource.html'>Open-Source Software</a></li>
 					<li><a href='licensing.html'>Licensing</a></li>
 					<li><a href='links.html'>Links</a></li>
