--- a/links.html
+++ b/links.html
@@ -15,6 +15,7 @@
 					<li><a href='index.html'>Home</a></li>
 					<li><a href='aes70.html'>AES70</a></li>					
 					<li><a href='downloads.html'>Downloads</a></li>
+					<li><a href='information.html'>Information</a></li>
 					<li><a href='opensource.html'>Open-Source Software</a></li>
 					<li><a href='licensing.html'>Licensing</a></li>
 					<li><a href='links.html'>Links</a></li>
@@ -26,18 +27,10 @@
 
       <h2>OCA Alliance</h2>
       <p>
-	Trade association promoting and evolving AES70.
+				Trade association promoting and evolving AES70.
         <br>
         <br>
-	<a rel=noopener target=_blank href='http://ocaalliance.com'>http://ocaalliance.com</a>
-      </p>
-
-      <h2>AES70 in the AES Journal</h2>
-      <p>
-        <i>The Open Control Architecture</i>,
-        <a rel=noopener target=_blank href='http://www.aes.org/journal/online/JAES_V61/4/'>JAES Volume 61 Issue 4 pp. 185-200; April 2013</a>
-        <br>
-        Comprehensive description of OCA features and mechanisms.
+				<a rel=noopener target=_blank href='http://ocaalliance.com'>http://ocaalliance.com</a>
       </p>
     </div>
   </body>
