--- a/opensource.html
+++ b/opensource.html
@@ -15,6 +15,7 @@
 					<li><a href='index.html'>Home</a></li>
 					<li><a href='aes70.html'>AES70</a></li>					
 					<li><a href='downloads.html'>Downloads</a></li>
+					<li><a href='information.html'>Information</a></li>
 					<li><a href='opensource.html'>Open-Source Software</a></li>
 					<li><a href='licensing.html'>Licensing</a></li>
 					<li><a href='links.html'>Links</a></li>
