--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@
 					<li><a href='aes70.html'>AES70</a></li>					
 					<li><a href='downloads.html'>Downloads</a></li>
 					<li><a href='information.html'>Information</a></li>
-					<li><a href='opensource.html'>Open-Source Software</a></li>
-					<li><a href='licensing.html'>Licensing</a></li>
-					<li><a href='links.html'>Links</a></li>
+					<li><a href='opensource.html'>OSS Guidelines</a></li>
 				</ul>
 			</div>
     </div>
     <div class=content>
-      <h1>Introduction</h1>
+      <h1>OCA Technical Site</h1>
       <p> 
-        The OCA Alliance Technical Site offers technical resources and information
+        This site offers technical resources and information
         for people working with AES70. 
       </p>
 
@@ -84,22 +82,26 @@
 						OCA Alliance software licensing details
 					</td>
 				</tr>
-				
-				<tr>
-					<td class="tdLooseTop"> 
-						<a href="links.html">Links</a>
-					</td>
-					<td class="tdLooseTop"> 
-						Useful links
-					</td>
-				</tr>
 			</table>
 			
+			<h3> The OCA Alliance </h3>
 			<p>
-				The site is curated by members of the
-				<a rel=noopener target=_blank href='http://ocaalliance.org'>OCA Alliance</a>.
+				The site is operated by the
+				<a rel=noopener target=_blank href='http://ocaalliance.com'>
+					<b>OCA Alliance</b>
+				</a>,
+				a not-for-profit corporation formed to develop, promote, and support 
+				the Audio Engineering Society's AES70 media network control standard.  
+				Based on Open Control Architecture (OCA) technology, 
+				AES70 is a free, full-featured control and monitoring scheme for audio devices 
+				connected to digital networks.  
 			</p>
-			
+			<p>
+				The Alliance's purposes are to promote adoption of AES70 through marketing, education, 
+				and training, and to develop new AES70 revisions that increase the standard's value 
+				and usability going forward.
+      </p>
+    </div>
 
 		<!-- PUBLIC DISCUSSION LIST.  RETIRED 2023.06.25 JB
 		
