Correct link to AES Journal article on OCA

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			
 			<h3> The OCA Alliance </h3>
 			<p>
-				The site is operated by the
+				This site is operated by the
 				<a rel=noopener target=_blank href='http://ocaalliance.com'>
 					<b>OCA Alliance</b>
 				</a>,
