--- a/information.html
+++ b/information.html
@@ -196,7 +196,7 @@
 				
 				<tr>
 					<td class="tdLooseTop">
-						<a target=_blank href='downloads/Device Control Newbie FAQ v02 .pdf'>					
+						<a target=_blank href='https://www.aes.org/journal/online/jaes.cfm?file=JAES_V61_4/JAES_V61_4_PG185hirez.pdf'>					
 							<b>The Open Control Architecture</b> <br> 
 						</a> in the AES Journal
 					</td>
