--- a/opensource.html
+++ b/opensource.html
@@ -290,7 +290,10 @@
       </ul>
       
       <p>
-        Email the signed document to <b>ossadmin@ocaalliance.com</b> .
+        Email the signed document to 
+					<a href="mailto:licensing@ocaalliance.com">
+						<b>licensing@ocaalliance.com</b>
+					</a>.
       </p>
       <p>
         The Alliance does not accept submissions by other delivery means.
