fix ref to licensing chapter

--- a/opensource.html
+++ b/opensource.html
@@ -61,8 +61,8 @@
 			</p>
 	
 			<p>
-				For complete licensing details, please go to the 
-				<a href ='licensing.html'>Licensing</a>  section of this website.
+				For complete licensing details, please go to  
+				<a href ='licensing.html'>Licensing</a> below.
 			</p>
 	
 			<h3> Contributing to Alliance open-source projects </h3>
