Cleaned up licensing details text in the Opensource page.  Style changes only.

--- a/opensource.html
+++ b/opensource.html
@@ -54,7 +54,7 @@
 	
 			<h3> Using Alliance open-source products </h3>
 			<p>
-				Alliance open-source products produced in 2024 or later are usually licensed under the 
+				Alliance open-source products produced in 2024 or later are normally licensed under the 
 				<a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache 2.0 license</a>.
 				For complete licensing details, please go to  
 				<a href =#Licensing>Licensing Details</a> below.
@@ -111,20 +111,12 @@
 				</p>
 				
 			<h2 id="Licensing"> Licensing Details </h2>
-			<p>
-				This page describes the OCA Alliance's licensing policies and procedures for open-source projects.  
-				The Alliance uses the Apache Foundation license, which covers
+			<p>  
+				The Alliance uses the Apache Foundation license, Version 2.0, which covers
 				a wide range of intellectual-property issues, including patent rights.
-			</p>
-			<p>
 				Apache licenses do <b>not</b> have copy-left requirements, and are widely accepted
 				for commercial use.
-			</p>
-			
-			<h3>Using an open-source product</h3>
-			<p class="tight">
-				Alliance open-source products produced in 2024 or later are usually licensed under the <b>Apache License, Version 2.0</b>. 
-			</p>
+			</p>			
 			<p>
 				A copy of this license, including instructions for use, is on the Apache website, here:
 			</p>
