--- a/opensource.html
+++ b/opensource.html
@@ -13,10 +13,11 @@
 			<div class=topnav>
 				<ul>
 					<li><a href='index.html'>Home</a></li>
-					<li><a href='aes70.html'>AES70</a></li>					
+					<li><a href='aes70.html'>AES70 Standard</a></li>	
+					<li><a href='repositories.html'>Repositories</a></li>					
 					<li><a href='downloads.html'>Downloads</a></li>
 					<li><a href='information.html'>Information</a></li>
-					<li><a href='opensource.html'>OSS Guidelines</a></li>
+					<li><a href='opensource.html'>Open-Source Guidelines</a></li>
 				</ul>
 			</div>
 		</div>
