Format changes to align look with that of the Alliance main site. - J Berryman

--- a/downloads.html
+++ b/downloads.html
@@ -1,28 +1,48 @@
-<html>
+<!DOCTYPE html>
+<!-- format2025 -->
+<html lang="en">
   <head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
+		<title>OCA Techsite: Downloads</title>
+		
     <link rel=stylesheet type='text/css' href='css/screen.css' media='screen'/>
-    <link href="https://fonts.googleapis.com/css?family=Oswald:300,500|Dosis:400,500" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100..900&display=swap" rel="stylesheet">
+		
     <script src='js/script.js' ></script>
-		<title>OCA Techsite - Downloads</title>
+	
   </head>
   <body>
-    <div class=header>
-      <div class=logo>
-        OCA Technical Site
-      </div>
-			<div class=topnav>
-				<ul>
-					<li><a href='index.html'>Home</a></li>
-					<li><a href='aes70.html'>AES70 Standard</a></li>	
-					<li><a href='repositories.html'>Repositories</a></li>					
-					<li><a href='downloads.html'>Downloads</a></li>
-					<li><a href='information.html'>Information</a></li>
-					<li><a href='opensource.html'>Open-Source Guidelines</a></li>
-				</ul>
+		<table>
+			<col width='15%'>
+			<col>
+			<tbody>
+				<tr>
+					<td>
+						<a href='index.html'>
+							<img src='images/OCA-Logo-300.png.webp' width='130px' height='60px' alt='OCA Alliance Logo'/>
+						</a>
+					</td>
+					<td class=topnav>
+						<ul>
+							<li><a href='aes70.html'>AES70 Standard</a></li>	
+							<li><a href='repositories.html'>Repositories</a></li>					
+							<li><a href='downloads.html'>Downloads</a></li>
+							<li><a href='information.html'>Information</a></li>
+							<li><a href='opensource.html'>Open-Source Guidelines</a></li>
+						</ul>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+
+		<div class='banner'>
+			<div class='title'>
+				<h1>Downloads</h1>
 			</div>
 		</div>
     <div class=content>
-      <h1> Downloads </h1>
 			<p class="tight">
 				This page provides access to tools from OCA Alliance members that aid developers 
 				and supporters of AES70-based equipment and systems. Both commercial and 
@@ -38,7 +58,7 @@
 				<a target=_blank href='repositories.html'>here</a>.
 			</p>
 			
-      <h2>Focusrite RedNet Virtual OCA Device</h2>
+      <h2 class='headSep'>Focusrite RedNet Virtual OCA Device</h2>
 
       <p>
         The Focusrite RedNet Virtual OCA Device is a device simulation developed by 
@@ -55,8 +75,7 @@
 					</a>
       </p>
 
-
-      <h2>AES70 Implementation Chart</h2>
+      <h2 class='headSep'>AES70 Implementation Chart</h2>
 
       <p>
         The AES70 Implementation Chart is an Excel spreadsheet template that offers a standard way for documenting the OCA objects of a device.
@@ -85,7 +104,7 @@
 				</li>
       </ul>
 		
-      <h2>OCA Wireshark Legacy Plugin</h2>
+      <h2 class='headSep'>OCA Wireshark Legacy Plugin</h2>
 
       <p>
         <a rel=noopener target=_blank href='https://wireshark.org/'>Wireshark</a> is a widely used network protocol analyzer. Beginning with Wireshark 4.0, an OCA plugin is included in its standard distribution. 
@@ -99,7 +118,7 @@
 				</a>
       </p>
 	  			
-			<h2> OCA for Video Devices - An Experimental Specification </h2>
+			<h2 class='headSep'>OCA for Video Devices - An Experimental Specification </h2>
 			
 			<p class="loose">
 				Although not originally designed for video devices, 
@@ -118,7 +137,7 @@
 				</a>
 			</p>
 
-      <h2>OCA Alliance member downloads</h2>
+      <h2 class='headSep'>OCA Alliance member downloads</h2>
 
       <p>
         Other OCA downloads are available to OCA Alliance members. These are mainly software
