Tidied up a bit of wording and fixed a couple of dead links.

--- a/downloads.html
+++ b/downloads.html
@@ -54,8 +54,9 @@
         </div>
 			</p>
 			<p> 
-				See also the collection of AES70-related <b>Git repositories</b> listed 
-				<a target=_blank href='repositories.html'>here</a>.
+				See also the  
+				<a target=_blank href='repositories.html'>Repositories page</a>
+				for listings of OCA-related open-source GitHub repositories.
 			</p>
 			
       <h2 class='headSep'>Focusrite RedNet Virtual OCA Device</h2>
