--- a/repositories.html
+++ b/repositories.html
@@ -52,11 +52,16 @@
 			<p>
 				Repositories maintained by the Alliance are subject to the Alliance's Open-Source Software policies described 
 				<a href='opensource.html'>here</a>.
+				In compliance with those policies, these repositories are licensed by the 
+				<a href='http://www.apache.org/licenses/LICENSE-2.0'>Apache 2.0 license</a>,
+				which disclaims OCA Alliance warrantees and limits the liability of repository contributors. 
+				Please consult the license text for full details.
 			</p>
 			
 			<p> 
-				See also the collection of AES70-related <b>downloads</b> listed 
-				<a target=_blank href='downloads.html'>here</a>.
+				See also the    
+				<a target=_blank href='downloads.html'><b>Downloads page</b></a> 
+				for listings of free OCA-related materials that are not in repositories.
 			</p>
 		
 			<h2 class='headSep'>OcaToolsAndDemos</h2>
@@ -161,7 +166,7 @@
 						<tr>
 							<td class='tdTightTop'>End-user license agreement:</td>
 							<td class='tdTightTop'>
-								<a target=_blank href='downloads/OCA Microdemo EULA.pdf'>
+								<a target=_blank href='downloads/OCA EULA.pdf'>
 									OCA Microdemo EULA.pdf
 								</a>
 							</td>
@@ -178,8 +183,8 @@
 				</p>
 				<p>
 					Please review the 
-						<a target=_blank href='http://ocaalliance.com/eula'>OCA Alliance End User License Agreement</a>
-					prior to downloading and using these tools.
+						<a target=_blank href='downloads/OCA EULA.pdf'>OCA Alliance End User License Agreement</a>
+					prior to downloading and using the Microdemo.
 				</p>
 			</div>
 				
