Fixed navbar text overflow; added DeusO AES70-OCC to 'Information' page.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<li><a href='repositories.html'>Repositories</a></li>					
 							<li><a href='downloads.html'>Downloads</a></li>
 							<li><a href='information.html'>Information</a></li>
-							<li><a href='opensource.html'>Open-Source Guidelines</a></li>
+							<li><a href='opensource.html'>Open&#8209;Source&nbsp;Guidelines</a></li>
 						</ul>
 					</td>
 				</tr>
