Tiny fixes to navbar and 'Information' page.

--- a/aes70.html
+++ b/aes70.html
@@ -26,7 +26,7 @@
 					</td>
 					<td class=topnav>
 						<ul>
-							<li><a href='aes70.html'>AES70 Standard</a></li>	
+							<li><a href='aes70.html'>AES70&nbsp;Standard</a></li>	
 							<li><a href='repositories.html'>Repositories</a></li>					
 							<li><a href='downloads.html'>Downloads</a></li>
 							<li><a href='information.html'>Information</a></li>
