--- a/downloads.html
+++ b/downloads.html
@@ -76,10 +76,7 @@
 					</a>
       </p>
 
-<<<<<<< HEAD
-      <h2 class='headSep'>AES70 Implementation Chart</h2>
-=======
-      <h2>AES70.js JavaScript library</h2>
+      <h2 class='headSep'>AES70.js JavaScript library</h2>
       
       <p>
         AES70.js is a javascript library that implements AES70. It can be used for building OCA
@@ -90,20 +87,7 @@
         (<a rel=noopener target=_blank href='https://www.npmjs.com/package/aes70'>https://www.npmjs.com/package/aes70</a>).
       </p>
 
-      <h2>AES70 OCP.1 Binary String Generator</h2>
-      
-      <p>
-		The AES70 OCP.1 Binary String Generator is a small tool that can generate AES70/OCA protocol data units (PDUs) for TCP-network-based control (OCP.1).
-        The PDUs are generated quickly and on the fly as plain text in hexadecimal notation after adjusting only a handful of parameters.
-        The resulting PDUs can be used by integrators, e.g. by copy-pasting them into a script, for controlling and monitoring AES70-capable devices over TCP/IP.
-      </p>
-      <p>
-		The AES70 OCP.1 Binary String Generator is a privately created and driven project. It is available at 
-		<a rel=noopener target=_blank href='https://github.com/escalonely/AES70_OCP1_StringGenerator'>https://github.com/escalonely/AES70_OCP1_StringGenerator</a>.
-      </p>
-
-      <h2>AES70 Implementation Chart</h2>
->>>>>>> 9b368eae7cbaa21c37509647c9d681827dbe39ef
+      <h2 class='headSep'>AES70 Implementation Chart</h2>
 
       <p>
         The AES70 Implementation Chart is an Excel spreadsheet template that offers a standard way for documenting the OCA objects of a device.
